# axislab-openai-build-week

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  RENDERER_ARCHITECTURE.md  SUBMISSION.md  mvp_doc.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  agents.py  feedback.py  kinematics.py  main.py  module_lessons.py  orchestrator.py  providers.py  qwen_client.py  scene_service.py  schemas.py  storage.py  templates.py  validation.py
backend/benchmarks/: README.md  compare_agent_society.py
backend/tests/: test_agent_society.py  test_api.py  test_kinematics.py  test_module_lessons.py  test_storage.py
docs/: AGENT_BASELINE_RESULTS.json  ARCHITECTURE.md  AXISLAB_DEMO_EN.srt  DEMO_SCRIPT.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  advancedRobotics.test.ts  advancedRobotics.ts  api.ts  coordinateRouting.test.ts  coordinateRouting.ts  defaultLesson.ts  kinematics.test.ts  kinematics.ts  main.tsx  react-katex.d.ts  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: AdvancedRoboticsLesson.tsx  CoordinateSystemLesson.tsx  MatrixPanel.tsx  RobotScene.tsx
frontend/src/renderer/: sceneCompiler.test.ts  sceneCompiler.ts
sites-deploy/: .gitignore
sites-deploy/.openai/: hosting.json
