[project]
name = "robotics-learning-api"
version = "0.1.0"
description = "Deterministic learning and kinematics API for the robotics MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "openai>=1.99.1,<2",
  "pydantic==2.11.7",
  "python-dotenv>=1.1.1,<2",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
